--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-cayman
+title: Queering Education Tool
+author: Nancy Chen
+description: This webpage is for Queering Education. This is going to outline resources for queering Computer Science education for secondary (middle and high school) learners.
